--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -15,7 +15,7 @@
 
 3. DFS(그래프 G의 간선 역방향)를 수행하되 시작점을 1번에서 구한 f[v]가 가장 큰 정점으로 잡는다
 
-4. 3과정에서에서 만들어진 분리된 트리들 각각을 강연결요소로 리턴한다
+4. 3과정에서 만들어진 분리된 트리들 각각을 강연결요소로 리턴한다
 
 }
 ```
