Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -48,7 +48,21 @@ Weighted Directed Graph : 방향 o, 가중치 o
 
 **강연결 요소** : 그래프 전체 대신 **강하게 연결된 부분 그래프**를 의미
 
-**강하게 연결 = 양방향 경로 존재**
+- **강하게 연결 = 양방향 경로 존재**
+
+- 종료시간이 빠르다 : 그 노드가 탐색에서 가장 깊이 들어가 있지 않았다, 즉 이어지는 노드가 많이 없다
+
+- 종료시간이 느리다 : 그 노드가 탐색에서 가장 깊이 들어가 있다. 즉, 이어지는 노드가 많다
+
+- **유향 그래프(Directed Graph)** 에서 서로 강하게 연결된 노드들의 집합을 찾는다
+
+- SCC에 속한 노드들은 어떤 방향으로도 왕복이 가능
+
+<br/>
+
+### 강연결 요소에서 역을 수행하는 이유
+
+역방향 탐색 수행 이유 : 일반적인 DFS로는 발견할 수 없는 강연결 요소(SCC)를 정확히 찾기 위함
 
 <br/>
 
@@ -59,7 +73,23 @@ DFS -> 간선 역으로 전환 -> 수행 시간 f[v]가 가장 큰 정점에서 
 
 ![IMG_3261](https://github.com/user-attachments/assets/b94c61de-d3a4-423c-8ad5-7d65d36d15e7)
 
+<br/>
 
+### 강연결 요소 알고리즘 
+
+```ruby
+ stronglyConnectedComponent(G) 
+{ 
+1. 그래프 G에 대해 DFS를 수행하여 각 정점 v의 완료시간 f [v]를 계산한다
+
+2. G의 모든 간선들의 방향을 뒤집는다
+
+3. DFS(그래프 G의 간선 역방향)를 수행하되 시작점을 1번에서 구한 f[v]가 가장 큰 정점으로 잡는다
+
+4. 3과정에서 만들어진 분리된 트리들 각각을 강연결요소로 리턴한다
+
+}
+```
 
 
 
