--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -10,6 +10,14 @@
 
 **강연결 요소** : **DFS로 각 정점 v의 완료시간 f[v]** 를 계산 후 **간선을 역방향으로 전환**하여 f[v]이 가장 많이 소요된(가장 큰) 정점에서 시작
 
+**다익스트라 알고리즘** : **최단 경로 문제**, 음의 가중치를 **허용하지 않는 경우** (0이상의 양수) 
+
+**벨만-포드 알고리즘** : **최단 경로 문제**, 음의 가중치를 **허용하는 경우**, 단, 음의 가중치를 허용한다고해서 **싸이클에서의 가중치 합이 음이 되면 안 된다**
+
+싸이클이 없는 그래프의 경우
+
+**플로이드-워샬** : 모든 정점 쌍에 대한 최단 경로 문제
+
 <br/>
 
 ### 시간 복잡도 정리
@@ -91,6 +99,21 @@ DFS -> 간선 역으로 전환 -> 수행 시간 f[v]가 가장 큰 정점에서 
 }
 ```
 
+<br/>
+
+### 최단 경로
+
+**최단 경로 문제** : 그래프에서 두 정점 사이의 경로 중에서 가중치 합이 가장 작은 경로를 찾는 문제
+
+다익스트라, 벨만포드,플로이드 워샬 존재 
+
+<br/>
+
+### 다익스트라 알고리즘
+
+![IMG_3265](https://github.com/user-attachments/assets/a0f87912-b3df-4988-8fb1-15bd7e603d0f)
+
+![IMG_3266](https://github.com/user-attachments/assets/e17f6122-f350-43da-a516-bd1dfaffbb43)
 
 
 
