Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -28,6 +28,8 @@
 
 위상정렬 : Θ(V+E)
 
+다익스트라 알고리즘 : O(|E|log|V|)
+
 <br/>
 
 ### 시간 복잡도 정리
@@ -111,14 +113,40 @@ DFS -> 간선 역으로 전환 -> 수행 시간 f[v]가 가장 큰 정점에서 
 
 ### 다익스트라 알고리즘
 
+음의 가중치를 **허용하지 않음**
+  
 ![IMG_3265](https://github.com/user-attachments/assets/a0f87912-b3df-4988-8fb1-15bd7e603d0f)
 
 ![IMG_3266](https://github.com/user-attachments/assets/e17f6122-f350-43da-a516-bd1dfaffbb43)
 
 
+<br>
 
+### 다익스트라 알고리즘 시간 복잡도 O(|E|log|V|)
 
+```ruby
+Dijkstra(G, r)                       // G: 그래프 (V, E), r: 시작 정점
+▷ G = (V, E): 주어진 그래프
+▷ r: 시작으로 삼을 정점
+{
+    S ← ∅ ;                          // S: 최단 거리가 확정된 정점들의 집합 (초기에는 공집합)
 
+    for each u ∈ V                   // 그래프의 모든 정점 u에 대해
+        d[u] ← ∞ ;                   // d[u]: 시작점 r에서 u까지의 최단 거리 추정값 (초기에는 무한대)
+    d[r] ← 0 ;                       // 시작 정점 r의 거리는 0으로 설정
+
+    while (S ≠ V) {                  // 모든 정점의 최단 거리가 확정될 때까지 반복
+        u ← extractMin(V - S, d) ;   // S에 포함되지 않은 정점들 중에서 d값이 가장 작은 정점 u 선택
+        S ← S ∪ {u} ;                // u의 최단 거리를 확정하고 S에 추가
+
+        for each v ∈ L(u)            // u와 인접한 정점 v에 대해 반복
+            if (v ∈ V-S and d[u] + w[u, v] < d[v]) then {   // u를 통해 v로 가는 경로가 더 짧다면
+                d[v] ← d[u] + w[u, v] ;                   // d[v]를 더 짧은 거리로 갱신 (이완)
+                prev[v] ← u ;                             // prev[v]에 u 저장 → 경로 추적을 위함
+            }
+    }
+}
+```
 
 
 
