Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -148,9 +148,55 @@ Dijkstra(G, r)                       // G: 그래프 (V, E), r: 시작 정점
 }
 ```
 
+<br/>
+
+### 벨만-포드 알고리즘
+
+**음의 가중치가 있는 그래프**에서도 사용 가능한 최단 경로 알고리즘
+
+<br/>
+
+### 벨만-포드 알고리즘 코드 
+
+```ruby
+BellmanFord(G, r)  // G는 그래프, r은 시작 정점
+{
+    for each u ∈ V              // 모든 정점 u에 대해
+        d[u] ← ∞;               // 거리 값을 무한대로 초기화
+    d[r] ← 0;                   // 시작 정점 r의 거리는 0으로 설정
+
+    for i ← 1 to |V| - 1        // 정점 수 - 1번 반복 (최악의 경우 모든 간선을 이완)
+        for each (u, v) ∈ E     // 모든 간선 (u, v)에 대해
+            if (d[u] + w[u, v] < d[v]) then { // u를 거쳐 v로 가는 경로가 더 짧다면
+                d[v] ← d[u] + w[u, v];        // 거리 값을 갱신 (이완: relaxation)
+                prev[v] ← u;                  // 최단 경로 상 이전 정점을 기록
+            }
+
+    // 음의 사이클 존재 여부 확인
+    for each (u, v) ∈ E
+        if (d[u] + w[u, v] < d[v])  // 여전히 더 짧은 경로가 있다면
+            output "해없음";       // 음의 사이클 존재함
+
+   
+}
+```
+
+<br/>
+
+### 벨만-포드 시간복잡도 : 시간 복잡도 : Θ(|V| x |E|)
+
+<br/>
 
 
+### 벨만 포드 cont'd : 만약 |V|개를 탐색한다면?
 
+만약 |V|개 이상의 간선으로 이루어진 최단 경로가 존재한다면 경로 상에 반드시 하나 이상의 사이클이 존재할 것이다
+
+이 경우, 최단 경로 문제에서 사이클에서의 가중치 합은 음이 될 수 없으므로 (음의 무한대로 향해서 답을 구할 수 없음) 반드시 0 이상이여야 한다
+
+그러나 만약 사이클에서의 가중치 합이 0 초과라면 사이클을 제외하여 경로 전체의 가중치 합을 낮출 수 있으므로 최단 경로라는 가정을 위배하게 된다
+
+가중치 합이 0이어도 사이클을 제외하여 더 적은 수의 간선으로 최단 경로를 만들 수 있어서 오류가 발생한다
 
 
 
