Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -198,12 +198,13 @@ BellmanFord(G, r)  // G는 그래프, r은 시작 정점
 
 가중치 합이 0이어도 사이클을 제외하여 더 적은 수의 간선으로 최단 경로를 만들 수 있어서 오류가 발생한다
 
+<br/>
 
+### 다익스트라, 벨만 포드 차이 
 
+- **다익스트라** : 한번 최단으로 판단된 경로는 그 이후에 변경되지 않아서 더 짧은 경로를 찾을 수 없다는 (**다익스트라 문제점**) 
 
-
-
-
+- **벨만-포드** : 모든 턴마다 모든 간선의 수를 비교하여 **확실하게 최단경로**를 구할 수 있다 , 하지만 시간이 좀 걸린다는 **문제가 존재**
 
 
 
