--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -16,7 +16,7 @@
 
 싸이클이 없는 그래프의 경우
 
-**플로이드-워샬** : 모든 정점 쌍에 대한 최단 경로 문제
+**플로이드-워샬** : 모든 정점 쌍에 대한 **행렬** 정점 k를 지나는 거리를 계산, **음의 가중치를 허용함**
 
 <br/>
 
@@ -206,9 +206,35 @@ BellmanFord(G, r)  // G는 그래프, r은 시작 정점
 
 - **벨만-포드** : 모든 턴마다 모든 간선의 수를 비교하여 **확실하게 최단경로**를 구할 수 있다 , 하지만 시간이 좀 걸린다는 **문제가 존재**
 
+<br/>
 
+### 플로이드-워샬 알고리즘
 
+- **동적 프로그래밍**을 이용하여 모든 정점 쌍에서의 최단 경로를 구함
 
+- **음의 가중치를 허용함**
+
+<br/>
+
+### 플로이드-워샬 과정 예시 1
+
+![IMG_3327](https://github.com/user-attachments/assets/eaf64e8a-a023-49ff-84af-45de15272e51)
+
+![IMG_3328](https://github.com/user-attachments/assets/d89ef156-f8f4-4370-a4d1-7479a084ddcc)
+
+![IMG_3324](https://github.com/user-attachments/assets/0069e337-232d-4a18-8ae1-9bba0f878ace)
+
+![IMG_3325](https://github.com/user-attachments/assets/408914b9-4e62-4e8c-a25c-d70a40741ea1)
+
+![IMG_3326](https://github.com/user-attachments/assets/0fd2fb34-dada-4f43-8b4b-6624dda6b82d)
+
+<br/>
+
+### 플로이드-워샬 과정 예시 2
+
+![IMG_3331](https://github.com/user-attachments/assets/db78a756-5ce6-4089-b48d-469ed8fa0167)
+
+![IMG_3332](https://github.com/user-attachments/assets/95e5b91a-3b91-4882-ba22-182e496042a2)
 
 
 
