Update 기말 정리본 2.md'

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -14,7 +14,7 @@
 
 **벨만-포드 알고리즘** : **최단 경로 문제**, 음의 가중치를 **허용하는 경우**, 단, 음의 가중치를 허용한다고해서 **싸이클에서의 가중치 합이 음이 되면 안 된다**
 
-**싸이클이 없는 그래프의 경우** : 
+**싸이클이 없는 그래프의 경우** : **위상정렬** -> 기준점에서 **갈 수 있는** 거리만 계산
 
 **플로이드-워샬** : 모든 정점 쌍에 대한 **행렬** 정점 k를 지나는 거리를 계산, **음의 가중치를 허용함**
 
