Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -18,6 +18,7 @@
 
 **플로이드-워샬** : 모든 정점 쌍에 대한 **행렬** 정점 k를 지나는 거리를 계산, **음의 가중치를 허용함**
 
+**그리디(Greedy) 알고리즘** : 최적부분 구조, 탐욕 속성
 <br/>
 
 ### 시간 복잡도 정리
