--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -158,6 +158,8 @@ Dijkstra(G, r)                       // G: 그래프 (V, E), r: 시작 정점
 
 <br/>
 
+## 13주차 
+
 ### 벨만-포드 알고리즘
 
 **음의 가중치가 있는 그래프**에서도 사용 가능한 최단 경로 알고리즘
@@ -244,13 +246,43 @@ BellmanFord(G, r)  // G는 그래프, r은 시작 정점
 
 ![IMG_3332](https://github.com/user-attachments/assets/95e5b91a-3b91-4882-ba22-182e496042a2)
 
+<br/>
 
+## !4주차 
 
+### 그리디(Greedy) 알고리즘
 
+**그리디 알고리즘(Greedy algorithm)** : 이름처럼 **눈앞의 이익**만 취하고 보는 알고리즘을 뜻함
 
+- 전체적으로 봤을 때 **최적이라고 보장하진 않지만**, **현재 시점에서 가장 이득**인 것으로 보이는 해를 선택하는 행위를 반복. **드물게 최적해가 보장되는 경우 존재**
 
+- **다익스트라 알고리즘은 DP가 아니라 그리디 알고리즘으로 판단**
 
+<br/>
 
+### 그리디 알고리즘 조건
+
+- **최적 부분 구조** : 그리디 알고리즘도 현재 가장 좋은 값을 탐색하다 보면 언젠간 마지막의 답이 존재해야함
+
+- **탐욕 선택 속성** : 현재 선택이 전체 최적해에 포함된다는 보장이 있어야 함
+
+<br/>
+
+### Activity-selection problem
+
+Activity-selection problem은 회의실 배정 문제와 같은 문제
+
+목표 : 시작시간 및 종료시간이 표시된 여러 개의 활동들이 있을 때, 주어진 시간 내에서 최대 개수의 활동을 하는 것을 목표로 함
+
+한 활동이 끝나기 전에 다른 활동을 시작할 수는 없다
+
+각 활동은 시작시간 si, 종료시간 fi로 표현
+
+아래 예시를 함께 보자
+
+각 활동 𝑎𝑖의 index가 종료시간 순서에 맞게 매겨져 있다고 가정한다 또한, 시간에 따른 표 이므로 i가 커질수록 종료 시간이 더 늦어진다
+
+![IMG_3344](https://github.com/user-attachments/assets/3241ed15-df96-49df-ac1f-9da6f19e6984)
 
 
 
