Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -284,7 +284,9 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 ![IMG_3344](https://github.com/user-attachments/assets/3241ed15-df96-49df-ac1f-9da6f19e6984)
 
+<br/>
 
+### Activity-selection problem를 그리디로 풀 수 있는지 증명 파트 보기 
 
 
 
