Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -258,6 +258,8 @@ BellmanFord(G, r)  // G는 그래프, r은 시작 정점
 
 - **다익스트라 알고리즘은 DP가 아니라 그리디 알고리즘으로 판단**
 
+- **그리디 알고리즘**으로 풀 수 있다면 **항상 그에 대한 동적 프로그래밍 방식의 답안이 존재** -> (by 그리디 알고리즘 조건 중 최적 부분 구조)
+
 <br/>
 
 ### 그리디 알고리즘 조건
@@ -288,7 +290,23 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 ### Activity-selection problem를 그리디로 풀 수 있는지 증명 파트 보기 
 
+<br/>
 
+### 그리디 알고리즘 설계 과정
+
+1. 주어진 문제에 대해 그리디 방식의 선택을 했을 때 **단 하나의 부분문제**만 남는지 확인
+
+2. 그리디 선택을 해도 **최적해**를 구할 수 있음을 보인다 -> **그리디 선택 성질 확인**
+
+3. 그리디 선택에 대한 **부분 최적구조**를 도출한다
+
+4. 해당 부분 최적구조를 바탕으로 알고리즘을 설계한다
+
+<br/>
+
+### 그리디 선택 성질
+
+**그리디 선택 성질** : 그리디 선택으로도 최적해를 구할 수 있다는 것을 보이는 것
 
 
 
