Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -308,7 +308,19 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 **그리디 선택 성질** : 그리디 선택으로도 최적해를 구할 수 있다는 것을 보이는 것
 
+<br/>
 
+## 15주차 
+
+### NP 완비 
+
+**P** : 다항식 시간 내에 **답을 찾을 수 있는** 문제들의 집합 (알고리즘 파트에서 지금까지 다루어 온 많은 문제들이 여기에 속함)
+
+**NP** : 	정답이 주어졌을 때, 그 정답이 다항식 시간 내에 **검증 가능한 문제의 집합**
+
+**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들
+
+**NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제
 
 
 
