Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -322,6 +322,7 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 **NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제
 
+- **NP는 P를 포함**하지만, 포함관계가 정확히 어떤지 **증명된 바가 없음** -> 경험적으로 대부분 P에 속하지 않은 NP 문제들이 있다고 추정
 
 
 
