Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -316,15 +316,23 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 **P** : 다항식 시간 내에 **답을 찾을 수 있는** 문제들의 집합 (알고리즘 파트에서 지금까지 다루어 온 많은 문제들이 여기에 속함)
 
-**NP** : 	**정답이 주어졌을 때**, 그 정답이 다항식 시간 내에 **검증 가능한 문제의 집합**
+**NP** : 	**정답이 주어졌을 때**, 그 정답이 다항식 시간 내에 **검증 가능한 문제의 집합**, 주의할 점은 **현실적인 시간에 풀 수 없지만**, 정답이 주어지면 검증은 다항식 시간 안에 할 수 있다는 것
 
-**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들
+**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들, 가장 어렵다의 기준의 바로 모든 NP 문제를 다항식 시간 내에 변환할 수 있다는 것
 
 **NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제
 
 - **NP는 P를 포함**하지만, 포함관계가 정확히 어떤지 **증명된 바가 없음** -> 경험적으로 대부분 P에 속하지 않은 NP 문제들이 있다고 추정
 
+<br/>
 
+### 컴퓨터 과학에서 다루는 문제의 종류
+
+- **결정 문제** : 결과가 Yes/No로 나오는 문제 (ex: n개의 지점을 모두 방문하고 돌아오는 거리 K 이하의 경로가 존재하는가?)
+
+- **최적화 문제** : 결과가 가능한 출력들 중 가장 좋은 해로 나오는 문제 (ex: n개의 지점을 모두 방문하고 돌아오는 최단 거리를 구하라)
+
+**NP-완비 이론**은 **결정 문제**만 다루지만, **최적화 문제**는 NP-완비 이론 적용을 위해 **그에 해당하는 결정 문제로 미리 변환 가능함**
 
 
 
