Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -334,6 +334,11 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 **NP-완비 이론**은 **결정 문제**만 다루지만, **최적화 문제**는 NP-완비 이론 적용을 위해 **그에 해당하는 결정 문제로 미리 변환 가능함**
 
+<br/>
+
+### 다항식 시간 변환 
+
+![IMG_3362](https://github.com/user-attachments/assets/de02f442-ad10-4448-81a6-f0ae15356374)
 
 
 
