--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -340,10 +340,9 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 ![IMG_3362](https://github.com/user-attachments/assets/de02f442-ad10-4448-81a6-f0ae15356374)
 
+만약 어느 정도 어려운지 모르는 문제 B가 있다고 하면, 유명한 난제군인 NP-완비군에 속하는 문제를 문제 A로 놓고 A를 B로 변환할 수 있다면, 문제 B는 NP-하드라는 굉장히 어려운 문제군
 
-
-
-
+NP 하드 문제에서는 **NP가 아닌 문제가 존재, 하지만 이것은 P는 아님**
 
 
 
