Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -318,7 +318,7 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 **NP** : 	**정답이 주어졌을 때**, 그 정답이 다항식 시간 내에 **검증 가능한 문제의 집합**, 주의할 점은 **현실적인 시간에 풀 수 없지만**, 정답이 주어지면 검증은 다항식 시간 안에 할 수 있다는 것
 
-**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들, 가장 어렵다의 기준의 바로 모든 NP 문제를 다항식 시간 내에 변환할 수 있다는 것
+**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들, 가장 어렵다의 기준의 바로 모든 NP 문제를 다항식 시간 내에 변환할 수 있다는 것, **답이 존재하는지도 모름 -> 답이 있냐 없냐를 결정하는 문제**
 
 **NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제
 
