Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -344,8 +344,17 @@ Activity-selection problem은 회의실 배정 문제와 같은 문제
 
 NP 하드 문제에서는 **NP가 아닌 문제가 존재, 하지만 이것은 P는 아님**
 
+<br/>
 
+### NP-완비 조건 
 
+![IMG_3421](https://github.com/user-attachments/assets/cc948969-81f7-4c48-80f0-22e2c237f281)
+
+정리와 같이 문제 A가 두 가지 조건을 만족해야 NP-완비 문제가 된다 
+
+1. **A는 NP이다**
+
+2. **A는 NP하드이다**
 
 
 
