Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -356,7 +356,11 @@ NP 하드 문제에서는 **NP가 아닌 문제가 존재, 하지만 이것은 P
 
 2. **A는 NP하드이다**
 
+<br>
 
+NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려면 모든 NP 문제로부터 다항식 시간 변환이 가능함을 보여야 한다. 하지만 이건 현실적으로 불가능에 가깝다 (NP 문제는 무한히 많음)
+
+그래서 우리는 **이미 NP-하드로 알려진 대표 문제로부터** 해당 문제를 다항식 시간에 변환해 주면 됨
 
 
 
