--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -22,6 +22,22 @@
 
 <br/>
 
+### 중요 개념 
+
+**P** : 다항식 시간 내에 **답을 찾을 수 있는** 문제들의 집합 (알고리즘 파트에서 지금까지 다루어 온 많은 문제들이 여기에 속함)
+
+**NP** : 	**정답이 주어졌을 때**, 그 정답이 다항식 시간 내에 **검증 가능한 문제의 집합**, 주의할 점은 **현실적인 시간에 풀 수 없지만**, 정답이 주어지면 검증은 다항식 시간 안에 할 수 있다는 것
+
+**NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들, 가장 어렵다의 기준의 바로 모든 NP 문제를 다항식 시간 내에 변환할 수 있다는 것, **답이 존재하는지도 모름 -> 답이 있냐 없냐를 결정하는 문제**
+
+**NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제 -> 모든 NP 문제를 문제 A로 바꿔서 풀 수 있다면, **문제 A만 풀 수 있어도 모든 NP 문제를 풀 수 있다**는 의미
+
+- **NP는 P를 포함**하지만, 포함관계가 정확히 어떤지 **증명된 바가 없음** -> 경험적으로 대부분 P에 속하지 않은 NP 문제들이 있다고 추정
+
+**상태공간트리(State-Space Tree)** : 문제 해결 과정의 **중간 상태**를 각각 하나의 노드로 나타낸 트리를 의미
+
+<br/>
+
 ### 시간 복잡도 정리
 
 프림 알고리즘 : O(ElogV)
@@ -362,11 +378,37 @@ NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려
 
 그래서 우리는 **이미 NP-하드로 알려진 대표 문제로부터** 해당 문제를 다항식 시간에 변환해 주면 됨
 
+<br/>
 
+## 16주차 
 
+### 상태공간트리(State-Space Tree)
 
+상태공간트리(State-Space Tree) : 문제 해결 과정의 중간 상태를 각각 하나의 노드로 나타낸 트리를 의미
 
+<br/>
 
+### TSP 예시 
+
+- 왼쪽 표: 각 도시 간 거리 행렬 (1~5 도시)
+
+- 오른쪽 그래프: 도시 간 거리 기반의 완전 그래프 (각 도시 간 간선 있음)
+
+![IMG_3439](https://github.com/user-attachments/assets/7333661c-fd57-4b0b-b8e4-dcd01f055e05)
+
+![IMG_3438](https://github.com/user-attachments/assets/4a02e185-b536-46d2-aec1-ea984bbc002b)
+
+해당 트리를 보면 다음과 같이 트리가 작성되었다 
+
+- Depth 0 (루트): 1개 (1)
+
+- Depth 1 (1-2, 1-3, 1-4, 1-5): 4개
+
+- Depth 2 (예: 1-2-3, 1-2-4, ...): 12개 (각 depth 1 노드당 3개씩 → 4×3=12)
+
+- Depth 3 (예: 1-2-3-4, 1-2-3-5, ...): 24개 (각 depth 2 노드당 2개씩 → 12×2=24)
+
+각 계산은 경우의 수 이용 (1은 고정되어 있고 2,3,4,5 끼리 순서를 정하는 것 ex: Depth 3은 1은 고정되어 있고, 첫번째로 올 수 있는 수는 4개 다음은 3개 그 다음은 2개 -> 4x3x2 = 24)
 
 
 
