Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -36,6 +36,8 @@
 
 **상태공간트리(State-Space Tree)** : 문제 해결 과정의 **중간 상태**를 각각 하나의 노드로 나타낸 트리를 의미
 
+**백트래킹(BackTracking)** : **DFS 혹은 그와 유사한 스타일**의 탐색을 총칭하는 용어, DFS와 유사하고 **끝까지 갔을 때 되돌아가서 다른 경로로 시도**하는 방식
+
 <br/>
 
 ### 시간 복잡도 정리
