Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -412,8 +412,17 @@ NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려
 
 각 계산은 경우의 수 이용 (1은 고정되어 있고 2,3,4,5 끼리 순서를 정하는 것 ex: Depth 3은 1은 고정되어 있고, 첫번째로 올 수 있는 수는 4개 다음은 3개 그 다음은 2개 -> 4x3x2 = 24)
 
+<br/>
 
+### 백트래킹 
 
+**백트래킹(BackTracking)** : DFS 혹은 그와 유사한 스타일의 탐색을 총칭하는 용어
+
+<br/>
+
+### 백트래킹 예시
+
+![IMG_3440](https://github.com/user-attachments/assets/b31e1e41-0e5e-4358-a4b4-6c565496d45b)
 
 
 
