--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -38,6 +38,8 @@
 
 **백트래킹(BackTracking)** : **DFS 혹은 그와 유사한 스타일**의 탐색을 총칭하는 용어, DFS와 유사하고 **끝까지 갔을 때 되돌아가서 다른 경로로 시도**하는 방식
 
+**한정분기(Branch-and-Bound)** : 경우의 수가 나누어지는 분기를 모두 **다 수행하는것이 아니라**, 한정된 수에 대해서만 수행해서 탐색 효율을 높이는 방법을 의미 -> **가능성이 없는 분기는 애초에 제외**, **미리 계산된 근사해를 알고있어야 함**
+
 <br/>
 
 ### 시간 복잡도 정리
@@ -424,14 +426,39 @@ NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려
 
 ![IMG_3440](https://github.com/user-attachments/assets/b31e1e41-0e5e-4358-a4b4-6c565496d45b)
 
+<br/>
 
+### 한정분기
 
+**한정분기(Branch-and-Bound)** : 경우의 수가 나누어지는 분기를 모두 **다 수행하는것이 아니라**, 한정된 수에 대해서만 수행해서 탐색 효율을 높이는 방법을 의미 -> **가능성이 없는 분기는 애초에 제외**
 
+<br/>
 
+### 한정분기 & 백트래킹 공통점 및 차이점
 
+공통점 : 여러가지 경우들을 차례로 나열해야 함
 
+차이점 : 백트래킹은 더 이상 진행되지 않을 때까지 탐색을 수행하는 반면, **한정분기**에서는 **최적해를 찾을 가능성이 없는 분기는 애초에 제외하게 됨**
 
+### 한정 분기 & 상태공간트리(TSP) 예시 
 
+![IMG_3455](https://github.com/user-attachments/assets/a4db90f7-71fc-4d8a-9eb1-5402b145b777)
+
+<br/>
+
+![IMG_3456](https://github.com/user-attachments/assets/c7829f57-9778-4a6c-82a7-2e53fe590aeb)
+
+<br/>
+
+![IMG_3457](https://github.com/user-attachments/assets/63f1c070-00ba-46ae-a65e-3b08b7214365)
+
+<br/>
+
+![IMG_3451](https://github.com/user-attachments/assets/c345f1b2-85f3-4a26-a9bf-f313a827f3b3)
+
+<br/>
+
+![IMG_3452](https://github.com/user-attachments/assets/1488a90d-c3da-45c7-8da3-46e486290e58)
 
 
 
