--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -20,6 +20,8 @@
 
 **그리디(Greedy) 알고리즘** : 최적부분 구조, 탐욕 속성
 
+**A * 알고리즘** : 그래프에서 **두 지점간의 최단경로**를 찾을 때 사용하는 알고리즘 f(x) = g(x) + h(x) -> g(x)는 시작점과 해당 정점과의 거리, **h(x)는 목적지까지 남은 거리**, A* 탐색 전략 : **최적우선탐색(Best-First Search)** 
+
 <br/>
 
 ### 중요 개념 
@@ -460,10 +462,44 @@ NP-하드 문제의 개념만 보면, 어떤 문제가 NP-하드임을 보이려
 
 ![IMG_3452](https://github.com/user-attachments/assets/1488a90d-c3da-45c7-8da3-46e486290e58)
 
+<br/>
+
+### A* 알고리즘
+
+**A * 알고리즘** : 그래프에서 두 지점간의 최단경로를 찾을 때 사용하는 알고리즘
+
+- **탐색 전략** : **최적우선탐색(Best-First Search)** -> **가장 가능성 있어 보이는 노드부터** 우선 방문, **매력함수값 𝑔(𝑥)**, **h(x)는 남은거리**
+
+- **ℎ(𝑥)는 실제 해당 정점과 목적지까지의 거리보다 크면 안 됨**
+
+<br/>
+
+### A* 알고리즘 예시 
+
+![image](https://github.com/user-attachments/assets/3e2cd5a3-7983-4045-8d7f-550326ea3405)
+
+- 괄호 안의 값이 현재까지 계산된 거리 + 추정 잔여거리
+
+- 괄호 안의 값이 가장 매력적인 노드들부터 선택해나감
+
+- 총 4번의 iteration 필요
+
+![스크린샷 2025-06-10 094213](https://github.com/user-attachments/assets/9fc7f708-1e20-44b4-b208-8d90f922e743)
+
+![스크린샷 2025-06-10 094221](https://github.com/user-attachments/assets/8277b9d2-d261-405f-bb88-0f345c8e5a4e)
+
+![스크린샷 2025-06-10 094227](https://github.com/user-attachments/assets/c812e583-a235-49df-8157-9a3473e97acb)
+
+<br/>
+
+### A* 알고리즘 정리 
 
 
+- 추정 잔여거리를 **더욱 실제에 근접하게 잡을 수** 있으면 알고리즘 **효율성이 더 높아짐**, 하지만 앞에서 서술한 바와 같이 **절대로 실제보다 더 길면 안됨**. 추정거리가 실제보다 더 길 수 있다면 A* 알고리즘에서 **최적해를 보장할 수 없음**
 
+- 해당 예시를 보면 TSP 문제를 쉽게 해결할 수 있는 것 처럼 보이지만, 노드 수에 따라 계승 복잡도로 **연산량이 증가하고 메모리 요구량도 늘어나게 됨**
 
+- A* 알고리즘은 **적절한 잔여거리 추정 방식이 주어졌을 때**, **효과적으로 최단경로를 탐색**할 수 있는 알고리즘으로 볼 수 있음
 
 
 
