Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -144,13 +144,42 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 
 ![IMG_3471](https://github.com/user-attachments/assets/baebf3c9-9106-48f0-876e-4a7bc8324986)
 
+<br/>
 
+## 문제 7
 
+![IMG_3474](https://github.com/user-attachments/assets/83c26200-170c-4e61-b654-c7dffa559eed)
 
+<br/>
 
+### 최적 부분 구조 및 예시 
 
+![스크린샷 2025-06-10 104634](https://github.com/user-attachments/assets/f4d30294-db15-4015-adf1-15f01d2e8c6e)
 
+![스크린샷 2025-06-10 104638](https://github.com/user-attachments/assets/ce61a5d6-db6b-476d-a48f-873e59c2f29f)
 
+![스크린샷 2025-06-10 104648](https://github.com/user-attachments/assets/517f8b5b-5694-488a-9d73-54d85e78aba5)
+
+![스크린샷 2025-06-10 104653](https://github.com/user-attachments/assets/4457ac0c-7e01-46ea-b0b3-9b8e4236a7b0)
+
+![스크린샷 2025-06-10 104657](https://github.com/user-attachments/assets/38642522-73a5-4f36-b817-d98a439bfa41)
+
+<br/>
+
+### DP 알고리즘 
+
+```ruby
+def LIS_length(A):
+    n = len(A)
+    dp = [1] * n  # 모든 위치에서 최소 길이는 1
+
+    for i in range(1, n):
+        for j in range(i):
+            if A[j] < A[i]:  # 증가 조건
+                dp[i] = max(dp[i], dp[j] + 1)
+
+    return max(dp)
+```
 
 
 
