Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -180,9 +180,25 @@ def LIS_length(A):
 
     return max(dp)
 ```
+<br/>
 
+### 문제 8
 
+### NP-완비 문제군에 속하는 문제 하나가 다항식 시간에 풀리면, 모든 NP-완비 문제들을 다항식 시간에 풀 수 있음을 보이시오
 
+NP 문제는 해가 주어지면 다항식 시간 안에 검증할 수 있는 문제이고 NP-완비(NP-complete) 문제는 **(1) NP에 속하면서(2) NP의 모든 문제로부터 다항식 시간 내 바꿀 수 있는 문제**이다 
+
+만약 A가 다항식 시간 내에 풀린다면, **모든 NP 문제를 A로 전환이 가능하여** 모든 NP 문제가 다항식 시간 내에 풀리게 되므로, **모든 NP완비 문제도 다항식 시간 내에 풀린다**
+
+<br/>
+
+### 문제 9
+
+### NP-하드 문제군에 속하는 문제 하나가 다항식 시간에 풀리더라도, 모든 NP-하드 문제를 다항식 시간에 풀 수는 없음을 보이시오
+
+**NP-하드 문제는 NP에 속할 수도 있고, 아닐 수도 있다**
+
+즉, **NP-하드 문제는 NP에 속하지 않을 수도 있기 때문에**, 하나의 NP-하드 문제가 다항식 시간에 풀린다고 해서 **모든 NP-하드 문제를 다항식 시간에 풀 수는 없다**
 
 
 
