Update 기말 정리본 2.md

--- a/기말 정리본 2.md
+++ b/기말 정리본 2.md
@@ -32,7 +32,7 @@
 
 **NP 완비** : NP에 속하며, **모든 NP 문제로부터 다항식 시간 내에 변환 가능한** 문제. NP 중 가장 어려운 문제들, 가장 어렵다의 기준의 바로 모든 NP 문제를 다항식 시간 내에 변환할 수 있다는 것, **답이 존재하는지도 모름 -> 답이 있냐 없냐를 결정하는 문제**
 
-**NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제 -> 모든 NP 문제를 문제 A로 바꿔서 풀 수 있다면, **문제 A만 풀 수 있어도 모든 NP 문제를 풀 수 있다**는 의미
+**NP-하드** : **모든 NP 문제로부터 다항식 시간 내 변환 가능**하지만, **꼭 NP에 속하지 않아도 되는** 문제 -> 모든 NP 문제를 문제 A로 바꿔서 풀 수 있다면, **문제 A만 풀 수 있어도 모든 NP 문제를 풀 수 있다**는 의미, **NP 하드 문제에서는 NP가 아닌 문제가 존재, 하지만 이것은 P는 아님**
 
 - **NP는 P를 포함**하지만, 포함관계가 정확히 어떤지 **증명된 바가 없음** -> 경험적으로 대부분 P에 속하지 않은 NP 문제들이 있다고 추정
 
