Update 알고리즘 기출 정리본.md

--- a/알고리즘 기출 정리본.md
+++ b/알고리즘 기출 정리본.md
@@ -147,6 +147,9 @@ i를 선택하지 않는다면, i-1이 선택이 될 것이고 (by 연속성 조
 <br/>
 
 ## 문제 7
+![image](https://github.com/user-attachments/assets/c356b13b-81a0-437f-8083-691e31f26202)
+
+### 최적 부분 구조 
 
 ![IMG_3474](https://github.com/user-attachments/assets/83c26200-170c-4e61-b654-c7dffa559eed)
 
