--- a/machine-learning/ML 02주차.md
+++ b/machine-learning/ML 02주차.md
@@ -1,4 +1,4 @@
-## Machine Learning (ML) 2주차 
+## Machine Learning (ML) 
 
 ![Image](https://github.com/user-attachments/assets/6d82c297-821e-4471-8e4a-74837bfb76cd)
 
