--- a/GitHub usage guide/guide/개념정리.md
+++ b/GitHub usage guide/guide/개념정리.md
@@ -1,1 +1,12 @@
+## 깃허브 생성 
 
+깃허브를 생성했을 때 다음 코드가 제공된다 
+
+```ruby
+git init                        # Git 저장소 초기화
+git add .                       # 변경된 파일 스테이징
+git commit -m "초기 커밋"       # 변경사항 저장
+git branch -M main              # 브랜치 이름을 main으로 변경 (필요시)
+git remote add origin <URL>    # GitHub와 연결
+git push -u origin main         # GitHub에 업로드
+```
