--- a/GitHub usage guide/guide/개념정리.md
+++ b/GitHub usage guide/guide/개념정리.md
@@ -4,9 +4,16 @@
 
 ```ruby
 git init                        # Git 저장소 초기화
-git add .                       # 변경된 파일 스테이징
-git commit -m "초기 커밋"       # 변경사항 저장
-git branch -M main              # 브랜치 이름을 main으로 변경 (필요시)
+git add .                       # 현재 폴더 안에 있는 모든 변경된 파일들을 저장할 준비
+git commit -m "초기 커밋"       # commit : 수정완료 , -m : 메세지 -> 즉, 수정하고 이 부분에 대한 설명을 의미
+git branch -M main              # 브랜치 이름을 main으로 변경
 git remote add origin <URL>    # GitHub와 연결
 git push -u origin main         # GitHub에 업로드
 ```
+<br/>
+
+### git add .
+
+- **git add .** : .(점)은 **전부**라는 의미, 즉 전체 파일을 올린다
+
+- **git add 특정 파일 이름** : 이 경우 특정 파일만 올라간다 (ex: git add index.html)
