--- a/GitHub usage guide/guide/개념정리.md
+++ b/GitHub usage guide/guide/개념정리.md
@@ -17,3 +17,17 @@ git push -u origin main         # GitHub에 업로드
 - **git add .** : .(점)은 **전부**라는 의미, 즉 전체 파일을 올린다
 
 - **git add 특정 파일 이름** : 이 경우 특정 파일만 올라간다 (ex: git add index.html)
+
+<br/>
+
+### git branch -M main  
+
+branch : 코드를 따로 실험하거나 개발해볼 수 있게 해주는 독립된 작업 공간
+
+실무에서는 원본(main 브랜치)은 그대로 두고, 복사본을 하나 만들어서(develop 브랜치), 그 복사본에서 수정 및 개발 후, 완성본을 원본(main 브랜치)에 올리는 방식 (main,develop 이름은 실무에서 많이 사용하는 이름)
+
+비유를 하자면, 게임을 하는 유저들은 main 브랜치을 이용중인 것이고 게임 개발자들은 develop 브랜치에서 개발하여 게임 점검 때 main 브랜치로 옮기면서 운영을 함 
+
+
+
+
