--- a/GitHub usage guide/guide/개념정리.md
+++ b/GitHub usage guide/guide/개념정리.md
@@ -7,7 +7,7 @@ git init                        # Git 저장소 초기화
 git add .                       # 현재 폴더 안에 있는 모든 변경된 파일들을 저장할 준비
 git commit -m "초기 커밋"       # commit : 수정완료 , -m : 메세지 -> 즉, 수정하고 이 부분에 대한 설명을 의미
 git branch -M main              # 브랜치 이름을 main으로 변경
-git remote add origin <URL>    # GitHub와 연결
+git remote add origin <URL>    # 로컬 Git 프로젝트를 GitHub에 있는 저장소와 연결
 git push -u origin main         # GitHub에 업로드
 ```
 <br/>
@@ -26,7 +26,17 @@ git push -u origin main         # GitHub에 업로드
 
 - 실무에서는 원본(main 브랜치)은 그대로 두고, 복사본을 하나 만들어서(develop 브랜치), 그 복사본에서 수정 및 개발 후, 완성본을 원본(main 브랜치)에 올리는 방식 (main,develop 이름은 실무에서 많이 사용하는 이름)
 
-- 비유를 하자면, 게임을 하는 유저들은 main 브랜치을 이용중인 것이고 게임 개발자들은 develop 브랜치에서 개발하여 게임 점검 때 main 브랜치로 옮기면서 운영을 함 
+- 비유 : 게임을 하는 유저들은 main 브랜치을 이용중인 것이고 게임 개발자들은 develop 브랜치에서 개발하여 게임 점검 때 main 브랜치로 옮기면서 운영을 함 
+
+<br/>
+
+### git remote add origin <URL>
+
+**의미** : GitHub에 있는 저장소를 origin이라는 이름으로 내 Git 프로젝트에 연결함
+
+- 예시 : git remote add origin https://github.com/LeeYuchan75/my-repo.git 는 GitHub에 있는 my-repo라는 저장소를 origin이라는 이름으로 내 Git 프로젝트에 연결한다는 의미 
+
+- 쉽게 말해, 내 레포지토리의 주소 이름을 origin이라는 별명으로 붙여서 사용하여, **로컬에 존재하는 git 프로젝트와 연결** -> **코드 업로드가 가능해짐**
 
 
 
