--- a/GitHub usage guide/guide/개념정리.md
+++ b/GitHub usage guide/guide/개념정리.md
@@ -38,6 +38,17 @@ git push -u origin main         # GitHub에 업로드
 
 - 쉽게 말해, 내 레포지토리의 주소 이름을 origin이라는 별명으로 붙여서 사용하여, **로컬에 존재하는 git 프로젝트와 연결** -> **코드 업로드가 가능해짐**
 
+<br/>
+
+### git push -u origin main
+
+- **git push** : GitHub에 업로드
+
+- **origin** : GitHub 저장소 이름(별명)
+
+- **main** : 업로드할 브랜치 이름
+
+- **-u** : 다음부터는 git push만으로도 같은 브랜치에 푸시할 수 있게 연결 (--set-upstream의 줄임말로 로컬 브랜치와 원격 브랜치를 연결한다는 의미 )
 
 
 
