--- a/operating system/operating system study/os 3-1장.md
+++ b/operating system/operating system study/os 3-1장.md
@@ -1,4 +1,4 @@
-## Process != Program
+<img width="330" height="516" alt="image" src="https://github.com/user-attachments/assets/44df1b1e-37b5-4430-8549-5518eab51544" />## Process != Program
 
 ![스크린샷 2025-03-28 151937](https://github.com/user-attachments/assets/275f3226-3339-484a-96e9-0d4e4910a724)
 
