--- a/operating system/operating system study/os 3-1장.md
+++ b/operating system/operating system study/os 3-1장.md
@@ -12,7 +12,7 @@
 
 ## Process address space 
 
-![System Resources](../../images/operating%20system%20images/Process_address_space.jpg)
+![System Resources](../../images/operating%20system%20images/Process_address_space.png)
 
 Process address space: 프로세스가 실행되는 동안 사용하는 메모리 공간을 의미
 
