--- a/operating system/operating system study/os 3-1장.md
+++ b/operating system/operating system study/os 3-1장.md
@@ -195,7 +195,7 @@ General-purpose register은 데이터를 임시 저장하고, 산술 및 논리 
 
 stack pointer는 stack의 최상단 주소를 가리키는 레지스터이다
 
-![image](https://github.com/user-attachments/assets/7739e5c6-316c-4e77-8f85-60f0be263a14)
+![System Resources](../../images/operating%20system%20images/PCB.png)
 
 <br/>
 
