--- a/operating system/operating system study/os 3-1장.md
+++ b/operating system/operating system study/os 3-1장.md
@@ -229,7 +229,7 @@ CPU는 I/O와 Disk에게 명령을 내리고 실제 작업은 CPU 간섭 없이 
 
 ## Tree of Process
 
-![image](https://github.com/user-attachments/assets/c2944465-5c28-4ea4-b518-8e5049542b59)
+![System Resources](../../images/operating%20system%20images/Tree_of_process.png)
 
 부모 프로세스(Parent Process) 가 자식 프로세스(Child Process) 를 생성함
 
