--- a/operating system/operating system study/os 3-1장.md
+++ b/operating system/operating system study/os 3-1장.md
@@ -359,57 +359,4 @@ abort() : 부모 process가 자식 process를 강제로 종료
 
 **고아 프로세스를 init process** 에게 맡김
 
-![image](https://github.com/user-attachments/assets/70b1e8c3-f55a-4447-a6b8-cf0ea59a2820)
-
-<br/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![System Resources](../../images/operating%20system%20images/orphan_process.png)
