--- a/operating system/operating system study/os 3-2장.md
+++ b/operating system/operating system study/os 3-2장.md
@@ -153,7 +153,7 @@ shmget() – 공유 메모리 생성
 
 shmat() - 공유 메모리에 연결
 
-![System Resources](../../images/operating%20system%20images/Shared_memory.png)
+![System Resources](../../images/operating%20system%20images/shared_memory.png)
 
 <br/>
 
