--- a/operating system/operating system study/os 3-2장.md
+++ b/operating system/operating system study/os 3-2장.md
@@ -225,58 +225,6 @@ while (true) {
 
 위 코드의 핵심은 **((in + 1) % BUFFER_SIZE)) == out** 이다
 
-![IMG_3077](https://github.com/user-attachments/assets/c662c963-dc4e-4afb-82de-be789e44cd16)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![System Resources](../../images/operating%20system%20images/Producer_Consumer_Problem.png)
 
 
