--- a/operating system/operating system study/os 4-1장.md
+++ b/operating system/operating system study/os 4-1장.md
@@ -14,7 +14,7 @@
 
 3. 각 요청은 독립된 프로세스가 담당함 -> 각각 독립적으로 처리
 
-![image](https://github.com/user-attachments/assets/3ab3ba8f-94d1-4d01-a9f3-eb20209b0140)
+![System Resources](../../images/operating%20system%20images/server.png)
 
 <br/>
 
