--- a/operating system/operating system study/os 4-1장.md
+++ b/operating system/operating system study/os 4-1장.md
@@ -42,7 +42,7 @@ thread(스레드)는 같은 프로세스 내부에서 실행되므로, 다음과
 
 ## Single-threaded vs Multi-threaded
 
-![스크린샷 2025-04-12 110513](https://github.com/user-attachments/assets/5d819f7c-da20-4396-a5d5-7fa9319c00df)
+![System Resources](../../images/operating%20system%20images/Thread.png)
 
 <br/>
 
