--- a/operating system/operating system study/os 4-1장.md
+++ b/operating system/operating system study/os 4-1장.md
@@ -217,7 +217,7 @@ Thread 3 → 네트워크 데이터 처리
 
 **정리하면, 데이터 병렬성은 같은 일을 나눠서 동시에, 작업 병렬성은 다른 일을 동시에 한다는 차이**
 
-![System Resources](../../images/operating%20system%20images/task_parellism.png)
+![System Resources](../../images/operating%20system%20images/task_parellelism.png)
 
 <br/>
 
