--- a/operating system/operating system study/os 4-2장.md
+++ b/operating system/operating system study/os 4-2장.md
@@ -6,7 +6,7 @@
 
 또한, 각 커널에 해당하는 user thread는 해당 커널에만 처리가 되어야 하므로 다른 커널에서 처리 x 
 
-![스크린샷 2025-04-12 131825](https://github.com/user-attachments/assets/517568b6-9358-47e8-8423-f1ed849db418)
+![System Resources](../../images/operating%20system%20images/multi_thread_문제점.png)
 
 <br/>
 
