--- a/operating system/operating system study/os 4-2장.md
+++ b/operating system/operating system study/os 4-2장.md
@@ -32,7 +32,7 @@ user thread에서 요청을 보냈을 때, 숫자 계산, 루프 반복, 변수 
 
 - 차단 문제 → 하나의 user thread가 blocking system call을 호출하면 전체 thread가 멈춤
 
-![image](https://github.com/user-attachments/assets/1f2bdc2b-d6f3-4fc8-a729-dbf1fc350a67)
+![System Resources](../../images/operating%20system%20images/many_to_one.png)
 
 <br/>
 
