--- a/operating system/operating system study/os 4-2장.md
+++ b/operating system/operating system study/os 4-2장.md
@@ -51,7 +51,7 @@ user thread에서 요청을 보냈을 때, 숫자 계산, 루프 반복, 변수 
 
 - 비용 큼 → 많은 kernel thread를 생성해야 해서 자원 소모 많음
 
-![image](https://github.com/user-attachments/assets/2e00ac3b-e099-415d-8d27-8e25d4bdb0bb)
+![System Resources](../../images/operating%20system%20images/one_to_one.png)
 
 <br/>
 
@@ -73,7 +73,7 @@ user ↔ kernel thread 간의 매핑은 유동적
 
 - 구현이 복잡함 → 운영체제가 스레드 매핑을 관리해야 하므로 구현 부담 증가
 
-![image](https://github.com/user-attachments/assets/85969825-d88c-4bbb-b24c-379b3d8abc3a)
+![System Resources](../../images/operating%20system%20images/many_to_many.png)
 
 <br/>
 
