--- a/operating system/operating system study/os 4-2장.md
+++ b/operating system/operating system study/os 4-2장.md
@@ -79,7 +79,7 @@ user ↔ kernel thread 간의 매핑은 유동적
 
 ## 리눅스와 윈도우는 one to one 방식을 사용 
 
-![스크린샷 2025-04-12 140629](https://github.com/user-attachments/assets/b0456df8-cbb6-4336-a3e0-70f017d2db0c)
+![System Resources](../../images/operating%20system%20images/Linux_one_to_one.png)
 
 <br/>
 
