--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -168,7 +168,7 @@ I/O 대기 제외 대기시간: 6분 → Waiting time = 6분
 
 <br/>
 
-![image](https://github.com/user-attachments/assets/6c56b8c4-327c-44d4-ade7-5c9b4cc64e30)
+![System Resources](../../images/operating%20system%20images/time_criteria.png)
 
 <br/>
 
