--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -174,7 +174,8 @@ I/O 대기 제외 대기시간: 6분 → Waiting time = 6분
 
 ## 예시 1 
 
-![image](https://github.com/user-attachments/assets/ef512681-ffc7-46a0-9934-2cb66e465473)
+![System Resources](../../images/operating%20system%20images/turnaround_예시.png)
+
 
 **Turnaround Time = 프로세스가 제출된 시점부터 완료될 때까지 걸린 전체 시간**
 
