--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -205,7 +205,7 @@ I/O 대기 제외 대기시간: 6분 → Waiting time = 6분
 
 마지막 문장 오타 of process 1 -> of process 
 
-![System Resources](../../images/operating%20system%20images/tiemaround_예시2.png)
+![System Resources](../../images/operating%20system%20images/turnaround_예시2.png)
 
 ```ruby
 ## Process 1 
