--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -222,7 +222,7 @@ Waiting in ready queue (처음 대기)
 → CPU burst (처음 실행)
 ```
 
-![image](https://github.com/user-attachments/assets/9057ce9e-870c-4dee-aeb6-2c2fdff2c116)
+![System Resources](../../images/operating%20system%20images/process_예시.png)
 
 Process 1은 초반에 실행 기회를 빨리 얻었고, (response time = a)
 
