--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -236,7 +236,7 @@ Process 2는 많이 기다렸다가 실행된다는 점이 핵심 차이
 
 ## First-Come, First-Served (FCFS) Scheduling
 
-![스크린샷 2025-04-17 140119](https://github.com/user-attachments/assets/9e1b8b11-9e8a-4d2a-bd3c-8ac40231afbc)
+![System Resources](../../images/operating%20system%20images/FCFS.png)
 
 FCFS : 먼저 도착한 프로세스부터 실행하는 비선점형 스케줄링 (큐처럼 작동 → 먼저 온 순서대로 CPU를 할당함)
 
