--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -308,7 +308,7 @@ SJF 또한 다음과 같은 두가지 방식이 존재한다
 
 프로세스들이 언제 CPU를 사용하고, 얼마나 오래 사용했는지를 시간 순서대로 보여주는 막대 그래프를 Gantt(간트) 차트라고 한다 
 
-![image](https://github.com/user-attachments/assets/c41687e6-d590-46ec-a4cb-46666ff469c9)
+![System Resources](../../images/operating%20system%20images/SJF_Non_preemptive.png)
 
 P₁은 0에 도착하므로 먼저 실행
 
