--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -324,7 +324,7 @@ P₁이 끝난 시점(7)에 도착해 있는 프로세스들 중 CPU burst시간
 
 현재 실행 중인 프로세스보다 **더 짧은 남은 실행 시간을 가진 프로세스가 도착하면 선점함**
 
-![image](https://github.com/user-attachments/assets/96ed8d59-29af-4467-a484-985766017b30)
+![System Resources](../../images/operating%20system%20images/SJF_preemptive.png)
 
 현재 상황을 보면 P1이 가장 먼저 도착했으므로(도착 시간이 0인 것은 처음부터 여기에 존재했다는 의미) P1이 시행이 되다가 
 
