--- a/operating system/operating system study/os 5-1장.md
+++ b/operating system/operating system study/os 5-1장.md
@@ -358,7 +358,7 @@ P2가 도착하면, P1의 **남은 CPU burst(2초 시행했으니 5초 남음)**
 
 **여기서 핵심은 최근이다**, 대학에서 우리의 고등학교 성적을 볼 때, 고3 성적이 제일 중요한 이유와 비슷하다
 
-![image](https://github.com/user-attachments/assets/bb523b85-fb20-4589-9756-add0edc072ef)
+![System Resources](../../images/operating%20system%20images/지수평균법.png)
 
 위 4번 정의에서 각각의 의미는 다음과 같다
 
