--- a/operating system/operating system study/os 5-2장.md
+++ b/operating system/operating system study/os 5-2장.md
@@ -22,7 +22,7 @@ Time Quantum (q) : 각 프로세스가 한번에 사용할 수 있는 CPU 시간
 
 Time Quantum (q) = 20초 
 
-![image](https://github.com/user-attachments/assets/fff0bccf-5aa4-4776-8863-30d318281c0f)
+![System Resources](../../images/operating%20system%20images/RR과정.png)
 
 처음에 p1 ~ p4 까지 실행하고 다시 p1 ~ p4 까지 실행하는데 각 process마다 주어진 시간은 20초이고 p2를 처리하는데 17초만 소요되기 때문에
 
