--- a/operating system/operating system study/os 5-2장.md
+++ b/operating system/operating system study/os 5-2장.md
@@ -104,7 +104,7 @@ CPU는 하나이지만, 계산 능력을 증가시켜준 것
 
 core가 적을 수록 -> 전력 소모 감소, 그러나 성능 감소 
 
-![IMG_9977](https://github.com/user-attachments/assets/35e04055-2b25-4f21-aec5-3c1347439919)
+![System Resources](../../images/operating%20system%20images/RR예시.png)
 
 위 그림을 보면 각 코어마다 ready queue가 존재한다 
 
