--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -2,7 +2,8 @@
 
 **Race Condition** : 둘 이상의 프로세스(또는 스레드)가 공유 자원(예: 변수 count)에 동시에 접근하여 조작할 때, 실행 순서에 따라 결과가 달라지는 현상
 
-![IMG_3100](https://github.com/user-attachments/assets/837acc04-c1c8-4ae1-90bd-832f00bf02f6)
+![System Resources](../../images/operating%20system%20images/race_condtion.png)
+
 
 <br/>
 
