--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -75,7 +75,7 @@ count--는 업데이트한 값 말고 초기의 count 값에서 빼는 문제가
 
 아래는 2번 단계에서 race condition이 발생한 예이다 
 
-![image](https://github.com/user-attachments/assets/b2935286-158f-4199-986a-0b2e96925a8b)
+![System Resources](../../images/operating%20system%20images/race_condition_상황예시.png)
 
 <br/>
 
