--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -89,7 +89,7 @@ count--는 업데이트한 값 말고 초기의 count 값에서 빼는 문제가
 
 <br/>
 
-![image](https://github.com/user-attachments/assets/3bb3a49f-b106-4b99-891a-4422a41e26fd)
+![System Resources](../../images/operating%20system%20images/race_condition_해결책.png)
 
 **각 코드 설명**
 
