--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -127,7 +127,7 @@ count--는 업데이트한 값 말고 초기의 count 값에서 빼는 문제가
 
 Peterson’s Algorithm(피어슨 알고리즘)은 두 개의 프로세스를 기준으로 설계했고 그 이상은 다음 파트에 배울 semaphores 를 이용함 
 
-![image](https://github.com/user-attachments/assets/b1942d32-0843-41a3-a52b-2f51de558b22)
+![System Resources](../../images/operating%20system%20images/race_condition_해결책예시.png)
 
 <br/>
 
