--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -271,7 +271,7 @@ lock = false(열림)-> p1(lock = true p1은 실행 후 다시 닫힘) -> critica
 
 그럼 위 swap을 활용한 아래 예시를 보자 
 
-![스크린샷 2025-04-20 191418](https://github.com/user-attachments/assets/d72de0f8-f351-4888-89cf-7ddaf2f9b067)
+![System Resources](../../images/operating%20system%20images/swap_예시.png)
 
 왼쪽이 process 1 , 오른쪽이 process 2, lock의 초기값 = false 라고 하자 
 
