--- a/operating system/operating system study/os 6,7장.md
+++ b/operating system/operating system study/os 6,7장.md
@@ -449,7 +449,7 @@ init 생성을 두 번 해줘야 한다
 
 ## posix semaphore 구조 
 
-![image](https://github.com/user-attachments/assets/3c510a25-7d6c-4476-b5de-e23c72e04110)
+![System Resources](../../images/operating%20system%20images/posix_semaphore.png)
 
 - sem_t sem; : sem은 세마포어 객체, 타입은 sem_t이고, 내부적으로는 정수값을 사용하여 자원 수를 표현
 
