--- a/operating system/operating system study/os 8-1주차.md
+++ b/operating system/operating system study/os 8-1주차.md
@@ -110,7 +110,8 @@ semaphore에 대해 간단하게 복습하자면, wait를 통해 critical sectio
 
 **Request, Use 예시**
 
-![IMG_3130](https://github.com/user-attachments/assets/bf87cde5-c07b-483e-b4de-a8dfaf5d3517)
+![System Resources](../../images/operating%20system%20images/request_use.png)
+
 
 <br/>
 
