--- a/operating system/operating system study/os 8-1주차.md
+++ b/operating system/operating system study/os 8-1주차.md
@@ -117,8 +117,7 @@ semaphore에 대해 간단하게 복습하자면, wait를 통해 critical sectio
 
 **Release 예시**
 
-![IMG_3131](https://github.com/user-attachments/assets/80e58a08-3474-4105-b5b9-ec292735feb7)
-
+![System Resources](../../images/operating%20system%20images/release.png)
 
 <br/>
 
