--- a/operating system/operating system study/os 8-1주차.md
+++ b/operating system/operating system study/os 8-1주차.md
@@ -341,7 +341,7 @@ hold and wait은 다음과 같은 방법으로 배제가 가능하다
 
 위 내용을 표로 정리하면 아래와 같다 
 
-![IMG_3139](https://github.com/user-attachments/assets/adfec55c-53c9-48be-8007-4432c2b41fad)
+![System Resources](../../images/operating%20system%20images/deadlock_prevention.png)
 
 <br/>
 
