--- a/operating system/operating system study/os 8-2주차.md
+++ b/operating system/operating system study/os 8-2주차.md
@@ -93,7 +93,7 @@ process 2가 종료가 되면, 사용 가능한 자원의 수는 R1 = 2, R2 = 3,
 
 아래 이미지는 Deadlock Detection 에 대한 개념을 설명하고 있으며, 단일 인스턴스 자원의 경우에 사용하는 **Wait-for Graph(대기 그래프)** 로의 변환 과정을 보여주고 있다 
 
-![image](https://github.com/user-attachments/assets/29de47f9-968f-4700-830c-363cfe1667bf)
+![System Resources](../../images/operating%20system%20images/deadlock_detection.png)
 
 Wait-for Graph(대기 그래프)를 사용하면, 자원을 표시하지 않고 **process만 화살표로 표시**하여 어디서 교착상태가 발생했는지 **한번에 알 수 있다는 장잠**이 존재한다
 
