--- a/operating system/operating system study/os 9-1주차.md
+++ b/operating system/operating system study/os 9-1주차.md
@@ -40,7 +40,7 @@ DRAM는 실제로 디스크보다 훨씬 빠르지만 크기는 작다
 
 <br/>
 
-![image](https://github.com/user-attachments/assets/7a5f7365-9acc-4a4c-9cea-4dff866c16d5)
+![System Resources](../../images/operating%20system%20images/physical_dram.png)
 
 CPU는 **virtual address space** 활용한다. 즉, 우리가 프로그램에서 포인터로 불러오는 주소는 **가상의 주소 공간**이다
 
