--- a/operating system/operating system study/os 9-1주차.md
+++ b/operating system/operating system study/os 9-1주차.md
@@ -269,7 +269,7 @@ Execution Time은 Load Time에서 프로그램을 메모리에 올린 이후 CPU
 
 **Execution-time** 주소 결합 방식에서는 논리 주소(또는 가상 주소)와 물리 주소가 **서로 다르다**
 
-![IMG_3171](https://github.com/user-attachments/assets/26b7ec21-7721-4aeb-9d3a-02741d2db965)
+![System Resources](../../images/operating%20system%20images/execution_times.png)
 
 <br/>
 
