--- a/operating system/operating system study/os 9-1주차.md
+++ b/operating system/operating system study/os 9-1주차.md
@@ -283,7 +283,7 @@ Execution Time은 Load Time에서 프로그램을 메모리에 올린 이후 CPU
 
 PAS (Process Address Space)에 대해 복습을 하며 위 내용을 적용해보자 
 
-![image](https://github.com/user-attachments/assets/923f706f-eb7f-4dff-8274-39d75ef61150)
+![System Resources](../../images/operating%20system%20images/PAS.png)
 
 위와 같이 하나의 프로그램이 실행되면, 다음과 같은 주소 공간 구조를 가진다
 
