--- a/operating system/operating system study/os 9-1주차.md
+++ b/operating system/operating system study/os 9-1주차.md
@@ -371,8 +371,7 @@ os에서 Dynamic는 주로 **미룬다는 의미**로 사용됨
 
 <br/>
 
-![IMG_3173](https://github.com/user-attachments/assets/fdc49686-917b-4160-8686-9655c7076de9)
-
+![System Resources](../../images/operating%20system%20images/shared_library.png)
 
 
 
