--- a/operating system/operating system study/os 9-2주차.md
+++ b/operating system/operating system study/os 9-2주차.md
@@ -16,7 +16,7 @@ Swapping 시간의 대부분은 **데이터 전송 시간**이다. 그리고 이
 
 <br>
 
-![IMG_3461](https://github.com/user-attachments/assets/feb72fd0-21eb-4fa4-a8dd-ce01ccc4695c)
+![System Resources](../../images/operating%20system%20images/swapping.png)
 
 <br/>
 
