--- a/operating system/operating system study/os 9-2주차.md
+++ b/operating system/operating system study/os 9-2주차.md
@@ -89,7 +89,7 @@ Main memory는 보통 **Resident operating system (상주 운영 체제)** 와 *
 
 아래는 physical address이다 
 
-![IMG_3221](https://github.com/user-attachments/assets/c5a82009-78aa-4ccd-b087-a47be360a6ad)
+![System Resources](../../images/operating%20system%20images/프로세스할당.png)
 
 **Hole (홀)**
 
