--- a/operating system/operating system study/os 9-2주차.md
+++ b/operating system/operating system study/os 9-2주차.md
@@ -161,7 +161,7 @@ Dynamic Storage Allocation은 **First fit, Best fit, Worst fit**이 존재한다
 
 하지만 메모리 단편화(남는 공간 문제)를 어떻게 해결하느냐에 따라 **효율이 달라진다**
 
-![IMG_3224](https://github.com/user-attachments/assets/c07bb466-fa58-49ac-9aa7-e13911875cab)
+![System Resources](../../images/operating%20system%20images/dynamic_storage_allocation.png)
 
 <br/>
 
