--- a/operating system/operating system study/os 9-2주차.md
+++ b/operating system/operating system study/os 9-2주차.md
@@ -217,7 +217,7 @@ External Fragmentation 해결 방법: **Compaction (압축)**
 
 <br/>
 
-![IMG_3225](https://github.com/user-attachments/assets/d93d398f-4444-4b0e-9a74-2740d02ef996)
+![System Resources](../../images/operating%20system%20images/external_fragmentation.png)
 
 <br/>
 
