--- a/Artificial Neural Network/01장.md
+++ b/Artificial Neural Network/01장.md
@@ -4,4 +4,16 @@
 
 - **Reinforcement learning (강화학습)** : 보상 신호를 받아서, 보상을 최대로 하는 방법을 학습
 
-- **Unsupervised learning (비지도학습)** : 정답이 없는 데이터를 보고, 패턴이나 그룹(군집)을 찾아낸는 것 
+- **Unsupervised learning (비지도학습)** : 정답이 없는 데이터를 보고, 패턴이나 그룹(군집)을 찾아낸는 것
+
+<br/>
+
+### Supervised learning (지도학습)
+
+- **예시** : **MNIST 데이터셋**을 이용한 손글씨 숫자 분류 -> 손글씨 숫자 이미지를 보고 예측하는 것
+   - Input: 손글씨 이미지
+
+   - label: 숫자 라벨 (0~9)
+
+
+
