--- a/Artificial Neural Network/01장.md
+++ b/Artificial Neural Network/01장.md
@@ -11,6 +11,12 @@
 ### Supervised learning (지도학습)
 
 - **예시** : **MNIST 데이터셋**을 이용한 손글씨 숫자 분류 -> 손글씨 숫자 이미지를 보고 예측하는 것
+   - data : 사람이 직접 라벨링한 70,000개의 손글씨 숫자 이미지
+ 
+   - Training set : 처음 60,000개 이미지 → 신경망을 학습시키는 데 사용
+ 
+   - Test set : 마지막 10,000개 이미지 → 학습 중에는 사용하지 않고, 성능 평가에 사용
+     
    - Input: 손글씨 이미지
 
    - label: 숫자 라벨 (0~9)
