--- a/Artificial Neural Network/01장.md
+++ b/Artificial Neural Network/01장.md
@@ -20,6 +20,9 @@
    - Input: 손글씨 이미지
 
    - label: 숫자 라벨 (0~9)
+ 
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/supervised_learning_예시.png)
 
 
 
