--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -21,5 +21,8 @@
 
    - label: 숫자 라벨 (0~9)
  
+<br/>
+
+MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/supervised_learning_예시.png)
