--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -10,7 +10,7 @@
 
 ### Supervised learning (지도학습)
 
-- **예시** : **MNIST 데이터셋**을 이용한 손글씨 숫자 분류 -> 손글씨 숫자 이미지를 보고 예측하는 것
+- **예시 1** : **MNIST 데이터셋**을 이용한 손글씨 숫자 분류 -> 손글씨 숫자 이미지를 보고 예측하는 것
    - data : 사람이 직접 라벨링한 70,000개의 손글씨 숫자 이미지
  
    - Training set : 처음 60,000개 이미지 → 신경망을 학습시키는 데 사용
@@ -26,3 +26,36 @@
 MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/supervised_learning_예시.png)
+
+<br/>
+
+- **예시2** : **Object recognition (객체 인지)** -> 사진 속에 있는 물체가 무엇인지 맞추는 문제
+
+   - ImageNet 데이터셋 : 수천 개의 카테고리, 수백만 개의 라벨링된 이미지
+ 
+   - 매년 ImageNet 대규모 시각 인식 챌린지도 열림
+ 
+   - 카메라 각도, 조명, 환경 등이 다양함 -> **같은 물체라도 조건이 달라서** 인식이 어렵다
+ 
+   - 딥러닝 기술이 발전하면서 성능이 크게 향상
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
