--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -39,6 +39,9 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
  
    - 딥러닝 기술이 발전하면서 성능이 크게 향상
 
+<br/>
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/객체인지_예시.png)
 
 
 
