--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -43,6 +43,14 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/객체인지_예시.png)
 
+<br/>
+
+- **예시3** : **Neural Machine Translation (신경망 기반 기계 번역)**
+
+     - 영어 문장을 입력하면 Encoder가 의미를 벡터로 바꿔줌 → 이 벡터를 Decoder가 다시 다른 언어(스페인어) 문장으로 변환
+     
+     - 즉, 입력(영어 문장)과 출력(스페인어 문장)을 라벨로 학습하는 구조
+
 
 
 
