--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -51,6 +51,9 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
      
      - 즉, 입력(영어 문장)과 출력(스페인어 문장)을 라벨로 학습하는 구조
 
+<br/>
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/지도학습_예시3.png)
 
 
 
