--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -55,6 +55,10 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/지도학습_예시3.png)
 
+<br/>
+
+- **예시4** : **Caption generation (캡션 생성)** : 이미지에 맞는 설명(문장)을 자동으로 만들어내는 것
+ 
 
 
 
