--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -58,6 +58,12 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 <br/>
 
 - **예시4** : **Caption generation (캡션 생성)** : 이미지에 맞는 설명(문장)을 자동으로 만들어내는 것
+   
+    - CNN은 이미지를 이해하고
+    
+    - RNN은 그 결과를 바탕으로 문장을 만들어냄
+ 
+    - ex: 시장 사진 → "사람들이 야외 시장에서 쇼핑하고 있다."
  
 
 
