--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -65,7 +65,7 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
  
     - ex: 시장 사진 → "사람들이 야외 시장에서 쇼핑하고 있다."
  
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/캡션_예시.png)
 
 
 
