--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -67,7 +67,9 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
  
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/캡션_예시.png)
 
+<br/>
 
+### Unsupervised learning (비지도 학습)
 
 
 
