--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -69,9 +69,11 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 <br/>
 
-### Unsupervised learning (비지도 학습)
+### Unsupervised learning (비지도 학습) 최신 기술 성과
 
-- **최신 기술 성과** : 
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/비지도학습_예시.png)
+   
 
 
 
