--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -71,6 +71,9 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ### Unsupervised learning (비지도 학습) 최신 기술 성과
 
+- 왼쪽: 가짜 얼굴 (실제로 존재하지 않는 사람들)
+
+- 오른쪽: 가짜 방/침실 사진
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/비지도학습_성과.png)
    
